--- a/codeup_compile_note.ipynb
+++ b/codeup_compile_note.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "codeup_compile_note.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMKpX7ojAlI81nNsQQ3QrLZ",
+      "authorship_tag": "ABX9TyNjB2bUA53sgzLTOKKIBQ6w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -696,12 +696,215 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tzQb61tnh8Fn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tzQb61tnh8Fn",
+        "outputId": "25cf5a20-3cde-4215-db87-82635ecfa97e"
+      },
+      "source": [
+        "a = int(input())\r\n",
+        "sum = 0\r\n",
+        "\r\n",
+        "for i in range(0, a):\r\n",
+        "    if sum < a :\r\n",
+        "        sum = sum + i\r\n",
+        "    else:\r\n",
+        "        print(i-1)\r\n",
+        "        break"
+      ],
+      "execution_count": 191,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "55\n",
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tj_bQSK7o8Jn",
+        "outputId": "d9c64d0a-ec09-4852-f234-954e7fd0b156"
+      },
+      "source": [
+        "# 1부터 n까지 주사위, 1부터 m까지 주사위\r\n",
+        "\r\n",
+        "n, m = map(int, input().split())\r\n",
+        "\r\n",
+        "for i in range(1, n+1):\r\n",
+        "    for j in range(1, m+1):\r\n",
+        "        print(i, j)"
+      ],
+      "execution_count": 192,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2 3\n",
+            "1 1\n",
+            "1 2\n",
+            "1 3\n",
+            "2 1\n",
+            "2 2\n",
+            "2 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aPHqm1NcrKmE",
+        "outputId": "c3fa4a7c-31b6-44cb-8640-c01bc4f0f76f"
+      },
+      "source": [
+        "n = int(input(), 16)\r\n",
+        "\r\n",
+        "for i in range(1, 16):\r\n",
+        "    print('%X*%X=%X' %(n, i, n*i))"
+      ],
+      "execution_count": 199,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "B\n",
+            "B*1=B\n",
+            "B*2=16\n",
+            "B*3=21\n",
+            "B*4=2C\n",
+            "B*5=37\n",
+            "B*6=42\n",
+            "B*7=4D\n",
+            "B*8=58\n",
+            "B*9=63\n",
+            "B*A=6E\n",
+            "B*B=79\n",
+            "B*C=84\n",
+            "B*D=8F\n",
+            "B*E=9A\n",
+            "B*F=A5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K3P05UT_rvwc",
+        "outputId": "30227a64-51e6-4157-d431-b315f49b83b2"
+      },
+      "source": [
+        "num = input()\r\n",
+        "\r\n",
+        "for i in range(1, int(num)+ 1):\r\n",
+        "    if '3' in str(i) or '6' in str(i) or '9' in str(i):\r\n",
+        "        print('X', end=' ')\r\n",
+        "    else :\r\n",
+        "        print(str(i), end=' ')"
+      ],
+      "execution_count": 207,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "23\n",
+            "1 2 X 4 5 X 7 8 X 10 11 12 X 14 15 X 17 18 X 20 21 22 X "
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zrEFOlVstxh4",
+        "outputId": "b8e75df7-5f65-437f-c43e-79a48b9265ae"
+      },
+      "source": [
+        "r, g, b = map(int, input().split())\r\n",
+        "\r\n",
+        "for i in range(r):\r\n",
+        "    for j in range(g):\r\n",
+        "        for k in range(b):\r\n",
+        "            print(i, j, k)\r\n",
+        "            \r\n",
+        "print(r * g * b)"
+      ],
+      "execution_count": 210,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2 2 2\n",
+            "0 0 0\n",
+            "0 0 1\n",
+            "0 1 0\n",
+            "0 1 1\n",
+            "1 0 0\n",
+            "1 0 1\n",
+            "1 1 0\n",
+            "1 1 1\n",
+            "8\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wQnWkUZGvFy9",
+        "outputId": "74525b5d-6852-4652-906d-62c07d39c9bc"
+      },
+      "source": [
+        "h, b, c, s = map(int, input().split())\r\n",
+        "\r\n",
+        "print(round((h * b * c * s) / 8/ 1024 / 1024, 1), \"MB\")"
+      ],
+      "execution_count": 215,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "44100 16 2 10\n",
+            "1.7  MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t45b9Jc6w8Jt"
       },
       "source": [
         ""
       ],
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": []
     }
   ]
