Colaboratory를 통해 생성됨

--- a/codeup_compile_note.ipynb
+++ b/codeup_compile_note.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "codeup_compile_note.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNjB2bUA53sgzLTOKKIBQ6w",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN0/5z8iKTUElKq6Lw0Hm19",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -899,7 +900,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t45b9Jc6w8Jt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t45b9Jc6w8Jt",
+        "outputId": "8bd59157-2317-4840-c048-a2a943b83dc5"
+      },
+      "source": [
+        "w, h, b = map(int, input().split())\r\n",
+        "\r\n",
+        "def divide(x, y, z):\r\n",
+        "    return (x * y * z) / 8 / 1024 / 1024 \r\n",
+        "\r\n",
+        "print( format(divide(w,h,b), \".2f\" ), \"MB\")"
+      ],
+      "execution_count": 222,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1024 768 24\n",
+            "2.25 MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FWpIAj1syjyJ"
       },
       "source": [
         ""
