--- a/codeup_compile_note.ipynb
+++ b/codeup_compile_note.ipynb
@@ -6,7 +6,7 @@
       "name": "codeup_compile_note.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN0/5z8iKTUElKq6Lw0Hm19",
+      "authorship_tag": "ABX9TyML/gBbDGDo8jF/PauYkxHA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -929,7 +929,111 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FWpIAj1syjyJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FWpIAj1syjyJ",
+        "outputId": "d2d9aa6b-55ca-463a-82be-f266ddaf4905"
+      },
+      "source": [
+        "num = int(input())\r\n",
+        "cnt = 1\r\n",
+        "sum = 0\r\n",
+        "\r\n",
+        "while True:\r\n",
+        "    sum += cnt\r\n",
+        "    cnt += 1\r\n",
+        "\r\n",
+        "    if sum >= num :\r\n",
+        "        break\r\n",
+        "\r\n",
+        "print(sum)"
+      ],
+      "execution_count": 223,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "57\n",
+            "66\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m_CswRDU0mV6",
+        "outputId": "2c4a9d39-2a05-4212-8102-52f8a509181b"
+      },
+      "source": [
+        "num = int(input())\r\n",
+        "\r\n",
+        "for i in range(1, num+1):\r\n",
+        "    if i % 3 == 0:\r\n",
+        "        continue\r\n",
+        "    else:\r\n",
+        "        print(i, end=' ')"
+      ],
+      "execution_count": 229,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "1 2 4 5 7 8 10 "
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 262
+        },
+        "id": "uhg-lBHc1WsO",
+        "outputId": "d384b895-f9fb-4d9d-f27b-d6f53b75f741"
+      },
+      "source": [
+        "a, d, n = map(int, input().split())\r\n",
+        "arr = []\r\n",
+        "while True :\r\n",
+        "    \r\n",
+        "    "
+      ],
+      "execution_count": 231,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 1 1 \n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-231-b52cd70f0def>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0marr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0marr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0marr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'add'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rqtLkNE_3U0_"
       },
       "source": [
         ""
